Amend scripts to discard output from TWS/Gateway to stderr